# model/event.go
@@ -2,7 +2,7 @@ package model
 
 // Event description object
 //
-// swagger:parameters EventCreate
+// swagger:model EventObj
 type Event struct {
 	// Identifier generated by the storage TODO: remove
 	ID int64 `db:"id" json:"id"`
@@ -25,15 +25,14 @@ type Event struct {
 //
 // swagger:response EventResponse
 type EventResponse struct {
-	// Identifier generated by the storage
-	ID int64 `db:"id" json:"id"`
+	// in:body
+	event Event
+}
 
-	// Number of the owner of the event
-	Owner int64 `db:"owner" json:"owner"`
-
-	// Desired event name
-	Name string `db:"name" json:"name"`
-
-	// More detailed description of the event
-	Description string `db:"description" json:"description"`
+// EventParams description object params
+//
+// swagger:parameters EventCreate
+type EventParams struct {
+	// in:body
+	event Event
 }
