# swagger.json
@@ -28,47 +28,13 @@
         }
       }
     },
-    "/v1/user/{used_id}/event": {
+    "/v1/user/{user_id}/event": {
       "post": {
         "tags": [
           "event"
         ],
         "summary": "Creates a new event.",
         "operationId": "EventCreate",
-        "parameters": [
-          {
-            "type": "integer",
-            "format": "int64",
-            "x-go-name": "ID",
-            "description": "Identifier generated by the storage TODO: remove",
-            "name": "id",
-            "in": "query"
-          },
-          {
-            "type": "integer",
-            "format": "int64",
-            "x-go-name": "Owner",
-            "description": "Number of the owner of the event",
-            "name": "owner",
-            "in": "query",
-            "required": true
-          },
-          {
-            "type": "string",
-            "x-go-name": "Name",
-            "description": "Desired event name",
-            "name": "name",
-            "in": "query",
-            "required": true
-          },
-          {
-            "type": "string",
-            "x-go-name": "Description",
-            "description": "More detailed description of the event",
-            "name": "description",
-            "in": "query"
-          }
-        ],
         "responses": {
           "201": {
             "$ref": "#/responses/EventResponse"
@@ -85,28 +51,47 @@
       }
     }
   },
+  "definitions": {
+    "EventObj": {
+      "description": "Event description object",
+      "type": "object",
+      "required": [
+        "owner",
+        "name"
+      ],
+      "properties": {
+        "description": {
+          "description": "More detailed description of the event",
+          "type": "string",
+          "x-go-name": "Description"
+        },
+        "id": {
+          "description": "Identifier generated by the storage TODO: remove",
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "ID"
+        },
+        "name": {
+          "description": "Desired event name",
+          "type": "string",
+          "x-go-name": "Name"
+        },
+        "owner": {
+          "description": "Number of the owner of the event",
+          "type": "integer",
+          "format": "int64",
+          "x-go-name": "Owner"
+        }
+      },
+      "x-go-name": "Event",
+      "x-go-package": "github.com/Maleventum/arcana/model"
+    }
+  },
   "responses": {
     "EventResponse": {
       "description": "EventResponse description object response",
-      "headers": {
-        "description": {
-          "type": "string",
-          "description": "More detailed description of the event"
-        },
-        "id": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Identifier generated by the storage"
-        },
-        "name": {
-          "type": "string",
-          "description": "Desired event name"
-        },
-        "owner": {
-          "type": "integer",
-          "format": "int64",
-          "description": "Number of the owner of the event"
-        }
+      "schema": {
+        "$ref": "#/definitions/EventObj"
       }
     }
   },
